// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelCellInteger should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  -
</DocumentFragment>
`;

exports[`ModelCellInteger should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  baz
</DocumentFragment>
`;

exports[`ModelCellInteger should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
